# Financial-Sentiment-Analysis-Prototype

./: .env.example  Dockerfile  README.md  main.py  models.py  pyproject.toml  utils.py
